[gd_scene load_steps=6 format=2]

[ext_resource path="res://GameHUDRelated/AbilityPanel/AbilityButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://TowerRelated/Color_Blue/Leader/Ability/TowerSelectionPanel/Leader_BodyBackground.png" type="Texture" id=2]
[ext_resource path="res://TowerRelated/Color_Blue/Leader/Ability/TowerSelectionPanel/Leader_SelectionPanelBody.gd" type="Script" id=3]
[ext_resource path="res://MiscRelated/GUI_Category_Related/AdvancedButton/AdvancedButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://TowerRelated/Color_Blue/Leader/Ability/TowerSelectionPanel/MemberConnectionHide_Icon.png" type="Texture" id=5]

[node name="Leader_SelectionPanelBody" type="MarginContainer"]
margin_right = 110.0
margin_bottom = 45.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BodyBackground" type="TextureRect" parent="."]
margin_right = 110.0
margin_bottom = 45.0
mouse_filter = 2
size_flags_vertical = 3
texture = ExtResource( 2 )
stretch_mode = 2

[node name="InnerMarginer" type="MarginContainer" parent="."]
margin_right = 110.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 45 )
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="InnerMarginer"]
margin_left = 6.0
margin_top = 5.0
margin_right = 104.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="TowerAddButton" parent="InnerMarginer/HBoxContainer" instance=ExtResource( 1 )]
destroy_button_if_ability_lost = false

[node name="MemberShowHideButton" parent="InnerMarginer/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 39.0
margin_right = 59.0
margin_bottom = 12.0
size_flags_vertical = 2
texture_normal = ExtResource( 5 )

[node name="TowerRemoveButton" parent="InnerMarginer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 63.0
margin_right = 98.0
destroy_button_if_ability_lost = false
[connection signal="pressed_mouse_event" from="InnerMarginer/HBoxContainer/MemberShowHideButton" to="." method="_on_MemberShowHideButton_pressed_mouse_event"]
